<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">DEMO 1- SIMPLE DIALOG</string>
    <string name="d2">DEMO 2 - BUTTONS DIALOG</string>
    <string name="d3">DEMO 3 TEXT INPUT DIALOG</string>
    <string name="et">Enter</string>
    <string name="d4">EXERCISE 3</string>
    <string name="demo_4_datepicker_dialog">DEMO 4 DATEPICKER DIALOG</string>
    />
</resources>